django class based generic create view

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,8 @@
             <ul class="right hide-on-small-and-down">
               <li class="{% if active ==  'about' %}active{%endif%}"><a href="{% url 'collector-about' %}">About</a></li>
               <li class="{% if active ==  'index' %}active{%endif%}"><a href="{% url 'collector-list' %}">Index</a></li>
+              <li class="{% if active ==  'create' %}active{%endif%}"><a href="{% url 'collector-create' %}">Create</a></li>
+              
             </ul>
           </div>
         </nav>
