--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,5 +27,9 @@
     </div>
     {% block content%}
     {% endblock %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+      M.AutoInit()
+    </script>
 </body>
 </html>
