--- a/main_app/templates/main_app/collector_detail.html
+++ b/main_app/templates/main_app/collector_detail.html
@@ -50,5 +50,51 @@
               </table>
         </div>
     </div>
+    <div class="row">
+        <div class = "col s12">
+            <h2>Common Features of {{object.name}}</h2>
+        </div>
+    <div class = "col s6">
+        
+        {%if common_feature_list.count%}
+        {% for feature in common_feature_list %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <span>{{ feature.name }}</span>
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{%url 'assoc_feature' object.id feature.id%}" method="post">
+              {% csrf_token %}
+
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+            
+        {%else%}
+        <h5>!Shares All Common Features!</h5>
+        {%endif %}
+    </div>
+    <div class = "col s6">
+        {% if object.common_feature.count %}
+            {%for feature in object.common_feature.all%}
+                <div class="card col s12">
+                    <div class="card-title">
+                        {{feature.name}}
+                    </div>
+                </div>
+            {% endfor %}
+        {%else%}
+        <div class="card col s12">
+            <div class="card-title">
+                No Common Features Yet!!!
+            </div>
+        </div>
+        {%endif%}
+    </div>
+    </div>
 </main>
 {% endblock %}
