--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,12 +17,18 @@
           <div class="nav-wrapper">
             <a href="{% url 'collector-home' %}" class="brand-logo center"><i class="material-icons large" >dashboard</i>Collector Collector</a>
             <ul class="right hide-on-small-and-down">
+              {%if user.is_authenticated %}
               <li class="{% if active ==  'about' %}active{%endif%}"><a href="{% url 'collector-about' %}">About</a></li>
+              <li><a href="{% url 'logout' %}">Logout</a></li>
               <li class="{% if active ==  'add-feature' %}active{%endif%}"><a href="{% url 'common-feature-create' %}">Add Common Feature</a></li>
               <li class="{% if active ==  'list-feature' %}active{%endif%}"><a href="{% url 'common-feature-list' %}">View All Common Features</a></li>
               <li class="{% if active ==  'index' %}active{%endif%}"><a href="{% url 'collector-list' %}">Index</a></li>
               <li class="{% if active ==  'create' %}active{%endif%}"><a href="{% url 'collector-create' %}">Create</a></li>
+              {%else%}
+              <li><a href="{% url 'login' %}">Login</a></li>
+              <li><a href="{% url 'signup' %}">Sign Up</a></li>
               
+              {%endif%}
             </ul>
           </div>
         </nav>
